# TickTick-MCP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  ticktick_mcp.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py  focus_sessions.py  gtd_workflow.py  habit_tracking.py
scripts/: get_token.py  test_connection.py
src/ticktick_mcp/: __init__.py  cli.py  config.py  server.py
src/ticktick_mcp/api/: __init__.py  client.py  endpoints.py  exceptions.py
src/ticktick_mcp/cache/: __init__.py  task_cache.py
src/ticktick_mcp/models/: __init__.py  auth.py  common.py  focus.py  habits.py  projects.py  tags.py  tasks.py
src/ticktick_mcp/services/: __init__.py  auth_service.py  base_service.py  calendar_service.py  focus_service.py  habit_service.py  project_service.py  smart_service.py  statistics_service.py  tag_service.py  task_service.py  user_service.py
src/ticktick_mcp/tools/: __init__.py  auth_tools.py  cache_tools.py  calendar_tools.py  focus_tools.py  habit_tools.py  project_tools.py  smart_tools.py  statistics_tools.py  tag_tools.py  task_tools.py  user_tools.py
tests/: __init__.py  conftest.py  test_config.py  test_models.py  test_services.py
