[project]
name = "ticktick-mcp"
version = "2.0.0"
description = "Production-ready MCP server for TickTick with 80+ tools - comprehensive task management, habit tracking, focus timer, smart scheduling, and productivity analytics"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mostafa Suliman"}
]
requires-python = ">=3.10"
keywords = [
    "mcp",
    "ticktick",
    "tasks",
    "productivity",
    "ai",
    "claude",
    "pomodoro",
    "habits",
    "focus",
    "time-management",
    "gtd",
    "todo",
    "task-management",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
ticktick-mcp = "ticktick_mcp.cli:main"
ticktick-auth = "ticktick_mcp.cli:auth_command"

[project.urls]
Homepage = "https://github.com/MostafaSuliman/TickTick-MCP"
Documentation = "https://github.com/MostafaSuliman/TickTick-MCP#readme"
Repository = "https://github.com/MostafaSuliman/TickTick-MCP"
Issues = "https://github.com/MostafaSuliman/TickTick-MCP/issues"
Changelog = "https://github.com/MostafaSuliman/TickTick-MCP/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ticktick_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/ticktick_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
